--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,21 @@ body {
   color: var(--third-text-color);
 }
 
+/* -----------PORTFOLIO-HTML---------------------------- */
+.project-name {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--second-title-color);
+}
+
+.type-of-project {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
+}
 /* --------SERVISE-CLASS-------------------- */
 
 .accent-color {
